# security-by-design

./: .dockerignore  .env.example  .env.test.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .ruff.toml  CONTRIBUTING.md  Dockerfile.contacts  Dockerfile.gateway  Dockerfile.telemetry  Dockerfile.weather  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 68b6b750c581_add_oauth_tokens_table.py
contacts/: __init__.py  api.py  config.py  database.py  encryption.py  fixtures.py  google_people.py  main.py  models.py  oauth.py  schemas.py  tokens.py
docs/: AUDIT_LOGGING.md  AUTHORIZATION.md  DEMO.md  GITHUB_CI_SETUP.md  GITLAB_CI_SETUP.md  KEY_MANAGEMENT.md  KUBERNETES.md  MONITORING.md  SECURITY_ARCHITECTURE.md  TECHNICAL_DOCUMENTATION.md  THREAT_MODEL.md  documentation_technique_avancee.md  sbom-from-pipeline.json  zap-report.html
kubernetes/: README.md
kubernetes/skylink/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
monitoring/: README.md
monitoring/prometheus/: prometheus.yml
openapi/: common.yaml  contacts.yaml  gateway.yaml  telemetry.yaml  weather.yaml
scripts/: configure_aircraft_oauth.py  configure_vehicle_oauth.py  fix_model_imports.py  generate_ca.sh  generate_client_cert.sh  generate_cosign_keys.sh  generate_server_cert.sh  generate_test_certs.sh  quick_oauth_setup.sh  renew_certificates.sh  rotate_encryption_key.sh  rotate_jwt_keys.sh  show_oauth_url.sh  test_oauth_url.py
skylink/: __init__.py  audit.py  audit_events.py  auth.py  config.py  main.py  middlewares.py  mtls.py  rate_limit.py  rbac.py  rbac_roles.py
skylink/models/: errors.py
skylink/routers/: __init__.py  auth.py  contacts.py  telemetry.py  weather.py
telemetry/: __init__.py  api.py  config.py  main.py  repository.py  schemas.py
tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_contacts_integration.py  test_contacts_service.py  test_encryption.py  test_error_handlers.py  test_gateway_contacts_routing.py  test_gateway_weather_routing.py  test_google_people_client.py  test_main.py  test_middlewares.py  test_models.py  test_mtls.py  test_mtls_auth_integration.py  test_oauth_client.py  test_pii_minimization.py  test_rate_limit.py  test_rbac.py  test_rbac_integration.py  test_routers.py  test_routers_auth.py  test_telemetry_api.py  test_telemetry_service.py  test_token_storage.py  test_weather_service.py
tests/e2e/: __init__.py  test_google_oauth_e2e.py  test_oauth_with_existing_tokens.py
tests/fixtures/: google_responses.json
tests/security/: __init__.py  conftest.py  test_access_control.py  test_authentication.py  test_cryptography.py  test_injection.py  test_input_validation.py  (+2 more)
weather/: __init__.py  api.py  config.py  fixtures.py  main.py  schemas.py
(+106 files in other folders)
